style(contact): add fixed height and spacing for form container layout

--- a/al-cakes78/src/components/Contact/FormContact/FormContact.module.css
+++ b/al-cakes78/src/components/Contact/FormContact/FormContact.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 500px;
 }
 
 .form-contact-container {
@@ -11,6 +12,7 @@
   align-items: center;
   justify-content: center;
   background-color: var(--background);
+  gap: 40px;
 }
 
 .form-contact {
